deployment/all-in-one.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: qotd
  labels:
    app: qotd
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-web
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: qotd-web
  template:
    metadata:
      labels:
        app: qotd-web
    spec:
      serviceAccountName: qotd-web
      restartPolicy: Always
      containers:
        - name: qotd-web
          image: registry.gitlab.com/quote-of-the-day/qotd-web/v4.0.0:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 20
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: "50m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "800Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-web
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: qotd-web
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-web
  namespace: qotd
  labels:
    app: qotd
    tier: web
spec:
  host: qotd-web.apps.6a6912f8bac822709f5c8646.am1.techzone.ibm.com
  to:
    kind: Service
    name: qotd-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
